# llm-test2

./: Cleaner.py  README.md  app.py  cleaned_labeled_data.jsonl  labeled_data.jsonl  lora_finetune_demo.ipynb  metrics.json  pyproject.toml  requirements.txt  sitecustomize.py  test4_pipeline.ipynb  val_labeled_data.jsonl
configs/: eval_config.yaml  merge_config.yml  teacher_models.yaml  training.yaml
data/: dataset.py  generate.py  teacher.py
models/: evaluate.py  train.py
peft/: __init__.py
src/: __init__.py
test1/: clean_jsonl.py  compare_sample.py  config.py  dataset_builder.py  (+5 more)
test7/: .env.sample  .gitignore  Makefile  README.md  distil_hidden.py  distil_logits.py  distill_demo.ipynb  pyproject.toml
test7/configs/: accelerate_ds_zero3.yaml  data.yaml  deepspeed_zero3.json  distill_hidden.yaml  distill_logits.yaml  eval.yaml  gkd.yaml  teacher_infer.yaml
test7/json_schema/: teacher_output.schema.json
test7/scripts/: build_dataset.py  evaluate.py  fetch_eastmoney.py  run_teacher_infer.py  train_gkd.sh  train_hidden_kd.sh  train_logits_kd.sh
test7/src/data/: akshare_client.py  dataset_builder.py  eastmoney_client.py  schema.py  summarize_kline.py
test7/src/decoding/: constraints.py  format_enforcer.py
test7/src/distill/: collators.py  gkd_trainer.py  hidden_kd.py  logits_kd.py
test7/src/eval/: calibrate.py  json_validity.py  metrics.py  splits.py
test7/src/teacher/: postprocess.py  vllm_offline.py
test7/src/utils/: io.py  logging.py  seed.py  time.py
test7/tests/: sitecustomize.py  test_constraints.py  test_metrics.py  test_schema.py
(+89 files in other folders)
